--- a/src/app/list/list.component.html
+++ b/src/app/list/list.component.html
@@ -1,9 +1,10 @@
 <div class="content">
   <ul>
-   @for(product of list; track list){{
-    <li>
-       <h2> {{list.products}}</h2>
+    <li *ngFor="let smartPhone of smartphones" class="list">
+      <div class="content">
+      <img src="{{smartPhone.thumbnail}}" />
+        <h2> Brand - {{smartPhone.title}}</h2>
+        </div>
       </li>
-    }}
   </ul>
 </div>
